--- a/dynatrace-operator/tests/Common/secret_test.yaml
+++ b/dynatrace-operator/tests/Common/secret_test.yaml
@@ -4,152 +4,41 @@ templates:
 tests:
   - it: should not exist if tokens not set
     set:
-      secret.apiToken:
-      secret.paasToken:
+      apiToken:
+      paasToken:
     asserts:
       - hasDocuments:
           count: 0
 
   - it: should not exist if autoCreate is false
     set:
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
-      secret.autoCreate: false
+      apiToken: test-api-token
+      paasToken: test-paas-token
+      autoCreateSecret: false
     asserts:
       - hasDocuments:
           count: 0
 
   - it: should not exist if only apiToken is set
     set:
-      secret.apiToken: test-token
-      secret.paasToken:
+      apiToken: test-token
+      paasToken:
     asserts:
       - hasDocuments:
           count: 0
 
   - it: should not exist if only paasToken is set
     set:
-      secret.apiToken:
-      secret.paasToken: test-token
+      apiToken:
+      paasToken: test-token
     asserts:
       - hasDocuments:
           count: 0
 
   - it: should exist if both tokens are set
     set:
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
-      name: test-name
-    asserts:
-      - isKind:
-          of: Secret
-      - equal:
-          path: metadata.name
-          value: test-name
-      - equal:
-          path: metadata.namespace
-          value: NAMESPACE
-      - equal:
-          path: data.apiToken
-          value: dGVzdC1hcGktdG9rZW4=
-      - equal:
-          path: data.paasToken
-          value: dGVzdC1wYWFzLXRva2Vu
-      - isNull:
-          path: data.proxy
-      - equal:
-          path: type
-          value: Opaque
-
-
-  - it: should exist if apiToken is set instead of secret.apiToken
-    set:
-      apiToken: test-api-token
-      secret.apiToken:
-      secret.paasToken: test-paas-token
-      name: test-name
-    asserts:
-      - isKind:
-          of: Secret
-      - equal:
-          path: metadata.name
-          value: test-name
-      - equal:
-          path: metadata.namespace
-          value: NAMESPACE
-      - equal:
-          path: data.apiToken
-          value: dGVzdC1hcGktdG9rZW4=
-      - equal:
-          path: data.paasToken
-          value: dGVzdC1wYWFzLXRva2Vu
-      - isNull:
-          path: data.proxy
-      - equal:
-          path: type
-          value: Opaque
-
-  - it: should exist if paasToken is set instead of secret.paasToken
-    set:
-      paasToken: test-paas-token
-      secret.apiToken: test-api-token
-      secret.paasToken:
-      name: test-name
-    asserts:
-      - isKind:
-          of: Secret
-      - equal:
-          path: metadata.name
-          value: test-name
-      - equal:
-          path: metadata.namespace
-          value: NAMESPACE
-      - equal:
-          path: data.apiToken
-          value: dGVzdC1hcGktdG9rZW4=
-      - equal:
-          path: data.paasToken
-          value: dGVzdC1wYWFzLXRva2Vu
-      - isNull:
-          path: data.proxy
-      - equal:
-          path: type
-          value: Opaque
-
-  - it: should exist if apiToken and paasToken are set instead of secret.apiToken and secret.paasToken
-    set:
       apiToken: test-api-token
       paasToken: test-paas-token
-      secret.apiToken:
-      secret.paasToken:
-      name: test-name
-    asserts:
-      - isKind:
-          of: Secret
-      - equal:
-          path: metadata.name
-          value: test-name
-      - equal:
-          path: metadata.namespace
-          value: NAMESPACE
-      - equal:
-          path: data.apiToken
-          value: dGVzdC1hcGktdG9rZW4=
-      - equal:
-          path: data.paasToken
-          value: dGVzdC1wYWFzLXRva2Vu
-      - isNull:
-          path: data.proxy
-      - equal:
-          path: type
-          value: Opaque
-
-  - it: should favour secret.apiToken and secret.paasToken over apiToken and paasToken
-    set:
-      apiToken: an-incorrect-api-token
-      paasToken: an-incorrect-paas-token
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
       name: test-name
     asserts:
       - isKind:
@@ -174,8 +63,8 @@ tests:
 
   - it: should contain a value for a proxy if proxy is set
     set:
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       name: test-name
       proxy: test-proxy
     assert:
