--- a/dynatrace-operator/templates/Common/customresource-dynakube.yaml
+++ b/dynatrace-operator/templates/Common/customresource-dynakube.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
-{{- if and (.Values.apiUrl) (include "dyntrace-operator.apiToken" .) (include "dyntrace-operator.paasToken" .) }}
+{{- if and (.Values.apiUrl) (.Values.apiToken) (.Values.paasToken) }}
 apiVersion: dynatrace.com/v1alpha1
 kind: DynaKube
 metadata:
