--- a/dynatrace-operator/tests/Common/customresource-modules/customresource-dynakube_kubemon_test.yaml
+++ b/dynatrace-operator/tests/Common/customresource-modules/customresource-dynakube_kubemon_test.yaml
@@ -5,8 +5,8 @@ tests:
   - it: should add kubernetesMonitoring if set
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
     asserts:
@@ -40,8 +40,8 @@ tests:
   - it: "should manipulate kubernetesMonitoring replicas if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         replicas: 3
@@ -55,8 +55,8 @@ tests:
   - it: "should add kubernetesMonitoring serviceAccountName if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         serviceAccountName: test-service-account
@@ -70,8 +70,8 @@ tests:
   - it: "should add kubernetesMonitoring tolerations if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         tolerations:
@@ -92,8 +92,8 @@ tests:
   - it: "should add kubernetesMonitoring nodeSelector if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         nodeSelector:
@@ -108,8 +108,8 @@ tests:
   - it: "should add kubernetesMonitoring resource if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         resources:
@@ -142,8 +142,8 @@ tests:
   - it: "should add kubernetesMonitoring labels if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         labels:
@@ -158,8 +158,8 @@ tests:
   - it: "should add kubernetesMonitoring args if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         args:
@@ -174,8 +174,8 @@ tests:
   - it: "should add kubernetesMonitoring env if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         env:
@@ -190,8 +190,8 @@ tests:
   - it: "should add kubernetesMonitoring group if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         group: test-group
@@ -205,8 +205,8 @@ tests:
   - it: "should add kubernetesMonitoring customProperties value if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         customProperties:
@@ -223,8 +223,8 @@ tests:
   - it: "should add kubernetesMonitoring customProperties valueFrom if set and enabled"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         customProperties:
@@ -241,8 +241,8 @@ tests:
   - it: "should add kubernetesMonitoring customProperties value if value and valueFrom are set"
     set:
       apiUrl: test-api-url
-      secret.apiToken: test-api-token
-      secret.paasToken: test-paas-token
+      apiToken: test-api-token
+      paasToken: test-paas-token
       kubernetesMonitoring:
         enabled: true
         customProperties:
