--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/Common/deployment-operator.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/Common/deployment-operator.yaml
@@ -66,14 +66,14 @@ spec:
               path: /healthz
               port: server-port
               scheme: HTTP
-            initialDelaySeconds: 15
+            initialDelaySeconds: 60
             periodSeconds: 10
           livenessProbe:
             httpGet:
               path: /healthz
               port: server-port
               scheme: HTTP
-            initialDelaySeconds: 15
+            initialDelaySeconds: 60
             periodSeconds: 10
       affinity:
         nodeAffinity:
@@ -99,7 +99,7 @@ spec:
                     operator: In
                     values:
                       - linux
-      serviceAccountName: {{ .Release.Name }}
+      serviceAccountName: {{ .Values.operatorServiceAccount }}
       {{- if .Values.operator.nodeSelector }}
       nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
       {{- end }}
