set serviceaccount for kubemon

--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -1480,6 +1480,8 @@ data:
 
         {{- if .Values.kubernetesMonitoring.serviceAccountName}}
         serviceAccountName: {{ .Values.kubernetesMonitoring.serviceAccountName }}
+        {{- else if .Values.kubernetesMonitoringServiceAccount }}
+        serviceAccountName: {{ .Values.kubernetesMonitoringServiceAccount }}
         {{- end }}
 
         {{- if .Values.kubernetesMonitoring.tolerations }}
