--- a/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator/values.yaml
@@ -56,7 +56,7 @@ oneagent:
   proxy: ""
   trustedCAs: ""
   networkZone: ""
-  useUnprivilegedMode: false
+  useUnprivilegedMode: true
   useImmutableImage: false
   agentVersion: ""
   customPullSecret: ""
@@ -66,4 +66,3 @@ secret:
   autoCreate: true
   apiToken: ""
   paasToken: ""
-  
