--- a/dynatrace-oneagent-operator/templates/Kubernetes/role-operator.yaml
+++ b/dynatrace-oneagent-operator/templates/Kubernetes/role-operator.yaml
@@ -83,6 +83,9 @@ rules:
     resources:
       - secrets
     verbs:
+      - create
+      - update
+      - delete
       - get
       - list
       - watch
@@ -113,6 +116,21 @@ rules:
       - create
       - update
       - delete
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - list
+      - create
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - update
+      - create
   - apiGroups:
       - policy
     resources:
