Prepare v0.10.0 for GKE marketplace

--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configuration-job.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/configuration-job.yaml
@@ -35,6 +35,7 @@ spec:
           sed "s/##UID##/${uid}/g" /objects/psp-oneagent.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/psp-webhook.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/psp-oneagent-unprivileged.yaml | kubectl apply -f -
+          sed "s/##UID##/${uid}/g" /objects/mutatingwebhookconfiguration.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/oneagentapm_crd.yaml | kubectl apply -f -
           sed "s/##UID##/${uid}/g" /objects/oneagent_crd.yaml | kubectl apply -f -
           sleep 5
