--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/values.yaml
@@ -50,7 +50,7 @@ oneagent:
   proxy: ""
   trustedCAs: ""
   networkZone: ""
-  useUnprivilegedMode: false
+  useUnprivilegedMode: true
   useImmutableImage: false
   agentVersion: ""
   customPullSecret: ""
