--- a/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-webhook.yaml
+++ b/dynatrace-oneagent-operator-google-marketplace/chart/dynatrace-oneagent-operator/templates/deployment-webhook.yaml
@@ -66,7 +66,7 @@ spec:
           image: {{ include "dynatrace-oneagent-operator.image" . }}
           imagePullPolicy: Always
           env:
-            - name: WATCH_NAMESPACE
+            - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
@@ -79,7 +79,14 @@ spec:
               path: /healthz
               port: server-port
               scheme: HTTPS
-            initialDelaySeconds: 15
+            initialDelaySeconds: 60
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTPS
+            initialDelaySeconds: 60
             periodSeconds: 10
           ports:
             - name: metrics
@@ -102,7 +109,7 @@ spec:
           image: {{ include "dynatrace-oneagent-operator.image" . }}
           imagePullPolicy: Always
           env:
-            - name: WATCH_NAMESPACE
+            - name: POD_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
@@ -113,6 +120,22 @@ spec:
           ports:
             - name: metrics
               containerPort: 8484
+            - name: server-port
+              containerPort: 9080
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: server-port
+              scheme: HTTP
+            initialDelaySeconds: 60
+            periodSeconds: 10
           resources:
             requests:
               cpu: 10m
@@ -124,6 +147,12 @@ spec:
             - name: certs-volume
               mountPath: /mnt/webhook-certs
       serviceAccountName: {{ .Values.webhookServiceAccount }}
+      {{- if .Values.operator.nodeSelector }}
+      nodeSelector: {{- toYaml .Values.operator.nodeSelector | nindent 8 }}
+      {{- end }}
+      {{- if .Values.operator.tolerations }}
+      tolerations: {{- toYaml .Values.operator.tolerations | nindent 8 }}
+      {{- end }}
       volumes:
         - name: certs-volume
           emptyDir: {}
