--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -1459,6 +1459,10 @@ data:
 
         {{- if .Values.classicFullStack.serviceAccountName }}
         serviceAccountName: {{ .Values.classicFullStack.serviceAccountName }}
+        {{- else if .Values.classicFullStack.useUnprivilegedMode }}
+        serviceAccountName: {{ .Values.oneagentUnprivilegedServiceAccount }}
+        {{- else }}
+        serviceAccountName: {{ .Values.oneagentServiceAccount }}
         {{- end }}
 
         {{- if .Values.classicFullStack.labels }}
