--- a/dynatrace-operator/templates/Kubernetes/role-operator.yaml
+++ b/dynatrace-operator/templates/Kubernetes/role-operator.yaml
@@ -14,7 +14,6 @@
 
 {{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 {{- if eq .Values.platform "kubernetes" }}
-
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -40,7 +39,6 @@ rules:
       - dynakubes/status
     verbs:
       - update
-
   - apiGroups:
       - apps
     resources:
@@ -78,7 +76,6 @@ rules:
       - deployments/finalizers
     verbs:
       - update
-
   - apiGroups:
       - ""
     resources:
@@ -123,8 +120,11 @@ rules:
       - services
     verbs:
       - create
+      - list
       - get
-
+      - delete
+      - update
+      - watch
   - apiGroups:
       - monitoring.coreos.com
     resources:
@@ -132,7 +132,6 @@ rules:
     verbs:
       - get
       - create
-
   - apiGroups:
       - networking.istio.io
     resources:
@@ -144,7 +143,6 @@ rules:
       - create
       - update
       - delete
-
   - apiGroups:
       - coordination.k8s.io
     resources:
