--- a/dynatrace-operator/templates/Common/Routing/serviceaccount-msgrouting.yaml
+++ b/dynatrace-operator/templates/Common/Routing/serviceaccount-msgrouting.yaml
@@ -3,4 +3,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: dynatrace-msgrouting
-  namespace: dynatrace
+  namespace: {{ .Release.Namespace }}
+  labels:
+  {{- include "dynatrace-operator.labels" . | nindent 4 }}
