--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/values.yaml
@@ -75,5 +75,20 @@ kubernetesMonitoring:
   env: []
   serviceAccountName: ""
 
+routing:
+  enabled: true
+  replicas: 1
+  group: ""
+  customProperties:
+    value: ""
+    valueFrom: ""
+  resources: { }
+  nodeSelector: { }
+  tolerations: [ ]
+  labels: { }
+  args: [ ]
+  env: [ ]
+  serviceAccountName: ""
+
 deployerHelm:
   image: ""
