--- a/dynatrace-operator/tests/Common/Routing/serviceaccount-routing_test.yaml
+++ b/dynatrace-operator/tests/Common/Routing/serviceaccount-routing_test.yaml
@@ -1,6 +1,6 @@
 suite: test service account for routing
 templates:
-  - Common/Routing/serviceaccount-msgrouting.yaml
+  - Common/Routing/serviceaccount-routing.yaml
 tests:
   - it: should exist
     asserts:
@@ -8,7 +8,7 @@ tests:
           of: ServiceAccount
       - equal:
           path: metadata.name
-          value: dynatrace-msgrouting
+          value: dynatrace-routing
       - equal:
           path: metadata.namespace
           value: NAMESPACE
