added pod security policy for routing

--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configuration-job.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configuration-job.yaml
@@ -33,6 +33,7 @@ spec:
 
               {{- if .Values.createPodSecurityPolicies }}
               sed "s/##UID##/${uid}/g" /objects/psp-kubernetes-monitoring.yaml | kubectl apply -f -
+              sed "s/##UID##/${uid}/g" /objects/psp-routing.yaml | kubectl apply -f -
               sed "s/##UID##/${uid}/g" /objects/psp-oneagent.yaml | kubectl apply -f -
               sed "s/##UID##/${uid}/g" /objects/psp-oneagent-unprivileged.yaml | kubectl apply -f -
               sed "s/##UID##/${uid}/g" /objects/psp-operator.yaml | kubectl apply -f -
