--- a/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
+++ b/dynatrace-operator-google-marketplace/chart/dynatrace-operator/templates/configmap.yaml
@@ -92,6 +92,48 @@ data:
         rule: "RunAsAny"
       fsGroup:
         rule: "RunAsAny"
+
+  psp-routing.yaml: |
+    apiVersion: policy/v1beta1
+    kind: PodSecurityPolicy
+    metadata:
+      name: dynatrace-routing
+      annotations:
+        seccomp.security.alpha.kubernetes.io/allowedProfileNames: "docker/default"
+        apparmor.security.beta.kubernetes.io/allowedProfileNames: "runtime/default"
+        seccomp.security.alpha.kubernetes.io/defaultProfileName: "docker/default"
+        apparmor.security.beta.kubernetes.io/defaultProfileName: "runtime/default"
+      ownerReferences:
+      - apiVersion: v1beta1
+        blockOwnerDeletion: true
+        kind: Application
+        name: {{ .Release.Name }}
+        uid: ##UID##
+    spec:
+      privileged: false
+      allowPrivilegeEscalation: false
+      readOnlyRootFilesystem: true
+      requiredDropCapabilities:
+        - ALL
+      volumes:
+        - "configMap"
+        - "emptyDir"
+        - "projected"
+        - "secret"
+        - "downwardAPI"
+        - "persistentVolumeClaim"
+      hostNetwork: false
+      hostIPC: false
+      hostPID: false
+      runAsUser:
+        rule: "MustRunAsNonRoot"
+      seLinux:
+        rule: "RunAsAny"
+      supplementalGroups:
+        rule: "RunAsAny"
+      fsGroup:
+        rule: "RunAsAny"
+
   psp-oneagent.yaml: |
     apiVersion: policy/v1beta1
     kind: PodSecurityPolicy
