--- a/dynatrace-operator/templates/Kubernetes/podsecuritypolicy-routing.yaml
+++ b/dynatrace-operator/templates/Kubernetes/podsecuritypolicy-routing.yaml
@@ -26,7 +26,7 @@ metadata:
 spec:
   privileged: false
   allowPrivilegeEscalation: false
-  readOnlyRootFilesystem: true
+  readOnlyRootFilesystem: false
   requiredDropCapabilities:
     - ALL
   volumes:
