--- a/dynatrace-operator/tests/Kubernetes/podsecuritypolicy-routing_test.yaml
+++ b/dynatrace-operator/tests/Kubernetes/podsecuritypolicy-routing_test.yaml
@@ -37,7 +37,7 @@ tests:
           value:
             privileged: false
             allowPrivilegeEscalation: false
-            readOnlyRootFilesystem: true
+            readOnlyRootFilesystem: false
             requiredDropCapabilities:
               - ALL
             volumes:
