--- a/dynatrace-operator/templates/Common/KubernetesMonitoring/clusterrole-kubernetes-monitoring.yaml
+++ b/dynatrace-operator/templates/Common/KubernetesMonitoring/clusterrole-kubernetes-monitoring.yaml
@@ -24,6 +24,7 @@ rules:
       - batch
       - apps
       - apps.openshift.io
+      - config.openshift.io
     resources:
       - nodes
       - pods
@@ -39,7 +40,14 @@ rules:
       - events
       - resourcequotas
       - pods/proxy
+      - nodes/proxy
+      - services
+      - clusterversions
     verbs:
       - list
       - watch
+      - get
+  - nonResourceURLs:
+      - /metrics
+    verbs:
       - get
