--- a/dynatrace-operator/templates/Common/KubernetesMonitoring/rolebinding-kubernetes-monitoring.yaml
+++ b/dynatrace-operator/templates/Common/KubernetesMonitoring/rolebinding-kubernetes-monitoring.yaml
@@ -12,6 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{- $platformIsSet := printf "%s" (required "Platform needs to be set to kubernetes or openshift" (include "dynatrace-operator.platformSet" .))}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
